--- a/source/styles/blocks/sort.scss
+++ b/source/styles/blocks/sort.scss
@@ -13,6 +13,7 @@
 
 .sort__select {
   max-width: 165px;
+  height: 32px;
   font-family: $font-primary;
   font-weight: 600;
   font-size: 16px;
